-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.4.0-beta1
-
None
-
Ubuntu 16.04 64 bit
-
49ffe0fb406421e9d2b110cae59fba1542fdf958
- Create a new Qt Quick Application project using the defaults from the wizard.
- Start the QML Profiler for this application.
- While the Profiler is recording, try to quit Creator.
You'll see a warning, that the application is still running. - Click "Force Quit".
Creator crashes:1 ?? 0x3b000000000 2 QmlProfiler::QmlProfilerTimelineModel::<lambda(const QmlProfiler::QmlEvent&, const QmlProfiler::QmlEventType&)>::operator()(const QmlProfiler::QmlEvent &, const QmlProfiler::QmlEventType &) const qmlprofilertimelinemodel.cpp 82 0x7fffd1893c3f 3 std::_Function_handler<void(const QmlProfiler::QmlEvent&, const QmlProfiler::QmlEventType&), QmlProfiler::QmlProfilerTimelineModel::announceFeatures(quint64)::<lambda(const QmlProfiler::QmlEvent&, const QmlProfiler::QmlEventType&)>>::_M_invoke(const std::_Any_data &, const QmlProfiler::QmlEvent &, const QmlProfiler::QmlEventType &) functional 1731 0x7fffd18943db 4 std::function<void (QmlProfiler::QmlEvent const&, QmlProfiler::QmlEventType const&)>::operator()(QmlProfiler::QmlEvent const&, QmlProfiler::QmlEventType const&) const functional 2127 0x7fffd186512d 5 QmlProfiler::QmlProfilerModelManager::QmlProfilerModelManagerPrivate::dispatch qmlprofilermodelmanager.cpp 373 0x7fffd185fbf5 6 QmlProfiler::QmlProfilerModelManager::addEvent qmlprofilermodelmanager.cpp 256 0x7fffd185f13f 7 QmlProfiler::QmlProfilerTraceClientPrivate::processCurrentEvent qmlprofilertraceclient.cpp 159 0x7fffd189fe5e 8 QmlProfiler::QmlProfilerTraceClient::messageReceived qmlprofilertraceclient.cpp 307 0x7fffd18a0a4a 9 QmlDebug::QmlDebugConnection::protocolReadyRead qmldebugclient.cpp 252 0x7fffd9503165 10 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (QmlDebug::QmlDebugConnection:: *)()>::call(void (QmlDebug::QmlDebugConnection:: *)(), QmlDebug::QmlDebugConnection *, void * *) qobjectdefs_impl.h 136 0x7fffd95098de 11 QtPrivate::FunctionPointer<void (QmlDebug::QmlDebugConnection:: *)()>::call<QtPrivate::List<>, void>(void (QmlDebug::QmlDebugConnection:: *)(), QmlDebug::QmlDebugConnection *, void * *) qobjectdefs_impl.h 169 0x7fffd9509717 12 QtPrivate::QSlotObject<void (QmlDebug::QmlDebugConnection:: *)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *) qobject_impl.h 120 0x7fffd9509180 13 QtPrivate::QSlotObjectBase::call qobject_impl.h 101 0x7ffff67871f2 14 QMetaObject::activate qobject.cpp 3749 0x7ffff67871f2 15 QMetaObject::activate qobject.cpp 3628 0x7ffff678775b 16 QmlDebug::QPacketProtocol::readyRead moc_qpacketprotocol.cpp 139 0x7fffd951c5e1 17 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (QmlDebug::QPacketProtocol:: *)()>::call(void (QmlDebug::QPacketProtocol:: *)(), QmlDebug::QPacketProtocol *, void * *) qobjectdefs_impl.h 136 0x7fffd9514725 18 QtPrivate::FunctionPointer<void (QmlDebug::QPacketProtocol:: *)()>::call<QtPrivate::List<>, void>(void (QmlDebug::QPacketProtocol:: *)(), QmlDebug::QPacketProtocol *, void * *) qobjectdefs_impl.h 169 0x7fffd95143ee 19 QtPrivate::QSlotObject<void (QmlDebug::QPacketProtocol:: *)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *) qobject_impl.h 120 0x7fffd9513dc8 20 QtPrivate::QSlotObjectBase::call qobject_impl.h 101 0x7ffff67871f2 ... <Mehr>
Creator should not crash in this situation.
- replaces
-
QTCREATORBUG-18597 [REG 4.3.0 -> 4.3.1] Crash when closing Creator while QML Profiler is running
-
- Closed
-
- resulted in
-
QTCREATORBUG-18745 Failed assertion when closing Creator while QML Profiler is running
-
- Reported
-
For Gerrit Dashboard: QTCREATORBUG-18736 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
202629,4 | QmlProfiler: Disconnect some signals on shutdown | 4.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |