src/plugins/qmlprofiler/qmlprofilerplugin.cpp
@@ -89,7 +89,7 @@ bool QmlProfilerPlugin::initialize(const QStringList &arguments, QString *errorS
 
 void QmlProfilerPlugin::extensionsInitialized()
 {
-    (void) new QmlProfilerTool(this);
+    m_profilerTool = new QmlProfilerTool(this);
 
     addAutoReleasedObject(new QmlProfilerOptionsPage);
 
@@ -111,6 +111,8 @@ void QmlProfilerPlugin::extensionsInitialized()
 
 ExtensionSystem::IPlugin::ShutdownFlag QmlProfilerPlugin::aboutToShutdown()
 {
+    delete m_profilerTool;
+
     // Save settings.
     // Disconnect from signals that are not needed during shutdown
     // Hide UI (if you add UI that is not in the main window directly)
